--- a/index.html
+++ b/index.html
@@ -252,322 +252,144 @@
                         </p>
 
                         <a href="#" class="btn-text">
-                            <span class="span">Learn More</span>
+                            <!-- Add Bootstrap CSS -->
+                            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
-                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                        </a>
+                            <!-- Add Bootstrap JS -->
+                            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+                            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+                            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-                    </div>
-                </li>
+                            <!-- Rest of the code -->
 
-                <li>
-                    <div class="service-card">
+                            <section class="section feature" aria-labelledby="feature-label">
+                                <div class="container">
 
-                        <div class="card-icon">
-                            <ion-icon name="shield-checkmark-outline" aria-hidden="true"></ion-icon>
-                        </div>
+                                    <figure class="feature-banner">
+                                        <img src="./assets/images/feature-banner.png" width="800" height="531" loading="lazy"
+                                            alt="feature banner" class="w-100">
+                                    </figure>
 
-                        <h3 class="h4 card-title">Secure Payments</h3>
+                                    <div class="feature-content">
 
-                        <p class="card-text">
-                            Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus
-                            cras
-                            justo.
-                        </p>
+                                        <p class="section-subtitle" id="feautre-label">Our Solutions</p>
 
-                        <a href="#" class="btn-text">
-                            <span class="span">Learn More</span>
+                                        <h2 class="h2 section-title">
+                                            We make your spending stress-free for you to have the perfect control.
+                                        </h2>
 
-                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                        </a>
+                                        <p class="section-text">
+                                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo
+                                            odio,
+                                            dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus.
+                                        </p>
 
-                    </div>
-                </li>
+                                        <ul class="feature-list">
 
-                <li>
-                    <div class="service-card">
+                                            <li class="list-group-item">
+                                                <div class="feature-card">
 
-                        <div class="card-icon">
-                            <ion-icon name="cloud-download-outline" aria-hidden="true"></ion-icon>
-                        </div>
+                                                    <div class="card-icon">
+                                                        <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                                                    </div>
 
-                        <h3 class="h4 card-title">Daily Updates</h3>
+                                                    <span class="span">
+                                                        Aenean quam ornare. Curabitur blandit.
+                                                    </span>
 
-                        <p class="card-text">
-                            Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus
-                            cras
-                            justo.
-                        </p>
+                                                </div>
+                                            </li>
 
-                        <a href="#" class="btn-text">
-                            <span class="span">Learn More</span>
+                                            <li class="list-group-item">
+                                                <div class="feature-card">
 
-                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                        </a>
+                                                    <div class="card-icon">
+                                                        <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                                                    </div>
 
-                    </div>
-                </li>
+                                                    <span class="span">
+                                                        Nullam quis risus eget urna mollis ornare.
+                                                    </span>
 
-                <li>
-                    <div class="service-card">
+                                                </div>
+                                            </li>
 
-                        <div class="card-icon">
-                            <ion-icon name="pie-chart-outline" aria-hidden="true"></ion-icon>
-                        </div>
+                                            <li class="list-group-item">
+                                                <div class="feature-card">
 
-                        <h3 class="h4 card-title">Market Research</h3>
+                                                    <div class="card-icon">
+                                                        <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                                                    </div>
 
-                        <p class="card-text">
-                            Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus
-                            cras
-                            justo.
-                        </p>
+                                                    <span class="span">
+                                                        Etiam porta euismod malesuada mollis.
+                                                    </span>
 
-                        <a href="#" class="btn-text">
-                            <span class="span">Learn More</span>
+                                                </div>
+                                            </li>
 
-                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-                        </a>
+                                            <li class="list-group-item">
+                                                <div class="feature-card">
 
-                    </div>
-                </li>
+                                                    <div class="card-icon">
+                                                        <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
+                                                    </div>
 
-            </ul>
+                                                    <span class="span">
+                                                        Vivamus sagittis lacus vel augue rutrum.
+                                                    </span>
 
-        </div>
-    </section>
+                                                </div>
+                                            </li>
 
-    <!-- 
-        - #ABOUT
-    -->
+                                        </ul>
 
-    <section class="about" aria-labelledby="about-label">
-        <div class="container">
+                                    </div>
 
-            <figure class="about-banner">
-                <img src="./assets/images/about-banner.png" width="800" height="580" loading="lazy" alt="about banner"
-                    class="w-100">
-            </figure>
+                                </div>
+                            </section>
 
-            <div class="about-content">
+                            <section class="stats" aria-label="our stats">
+                                <div class="container">
 
-                <p class="section-subtitle" id="about-label">Why Choose Us?</p>
+                                    <ul class="stats-card has-bg-image" style="background-image: url('./assets/images/stats-bg.jpg')">
 
-                <h2 class="h2 section-title">
-                    We bring solutions to make life easier for our clients.
-                </h2>
+                                        <li class="list-group-item">
+                                            <p class="card-text">
+                                                <span class="h1">7518</span>
 
-                <ul>
+                                                <span class="span">Completed Projects</span>
+                                            </p>
+                                        </li>
 
-                    <li class="about-item">
-                        <div class="accordion-card expanded" data-accordion>
+                                        <li class="list-group-item">
+                                            <p class="card-text">
+                                                <span class="h1">3472</span>
 
-                            <h3 class="card-title">
-                                <button class="accordion-btn" data-accordion-btn>
-                                    <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
+                                                <span class="span">Happy Customers</span>
+                                            </p>
+                                        </li>
 
-                                    <spna class="span h5">Professional Design</spna>
-                                </button>
-                            </h3>
+                                        <li class="list-group-item">
+                                            <p class="card-text">
+                                                <span class="h1">2184</span>
 
-                            <p class="accordion-content">
-                                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                                massa justo
-                                sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-                                cursus magna,
-                                vel.
-                            </p>
+                                                <span class="span">Expert Employees</span>
+                                            </p>
+                                        </li>
 
-                        </div>
-                    </li>
+                                        <li>
+                                            <p class="card-text">
+                                                <span class="h1">4523</span>
 
-                    <li class="about-item">
-                        <div class="accordion-card" data-accordion>
+                                                <spna class="span">Awards Won</spna>
+                                            </p>
+                                        </li>
 
-                            <h3 class="card-title">
-                                <button class="accordion-btn" data-accordion-btn>
-                                    <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
+                                    </ul>
 
-                                    <spna class="span h5">Top-Notch Support</spna>
-                                </button>
-                            </h3>
-
-                            <p class="accordion-content">
-                                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                                massa justo
-                                sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-                                cursus magna,
-                                vel.
-                            </p>
-
-                        </div>
-                    </li>
-
-                    <li class="about-item">
-                        <div class="accordion-card" data-accordion>
-
-                            <h3 class="card-title">
-                                <button class="accordion-btn" data-accordion-btn>
-                                    <ion-icon name="chevron-down-outline" aria-hidden="true" class="down"></ion-icon>
-
-                                    <spna class="span h5">Exclusive Assets</spna>
-                                </button>
-                            </h3>
-
-                            <p class="accordion-content">
-                                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-                                massa justo
-                                sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-                                cursus magna,
-                                vel.
-                            </p>
-
-                        </div>
-                    </li>
-
-                </ul>
-
-            </div>
-
-        </div>
-    </section>
-
-    <!-- 
-        - #FEATURE
-    -->
-
-    <section class="section feature" aria-labelledby="feature-label">
-        <div class="container">
-
-            <figure class="feature-banner">
-                <img src="./assets/images/feature-banner.png" width="800" height="531" loading="lazy"
-                    alt="feature banner" class="w-100">
-            </figure>
-
-            <div class="feature-content">
-
-                <p class="section-subtitle" id="feautre-label">Our Solutions</p>
-
-                <h2 class="h2 section-title">
-                    We make your spending stress-free for you to have the perfect control.
-                </h2>
-
-                <p class="section-text">
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo
-                    odio,
-                    dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus.
-                </p>
-
-                <ul class="feature-list">
-
-                    <li>
-                        <div class="feature-card">
-
-                            <div class="card-icon">
-                                <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
-                            </div>
-
-                            <span class="span">
-                                Aenean quam ornare. Curabitur blandit.
-                            </span>
-
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="feature-card">
-
-                            <div class="card-icon">
-                                <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
-                            </div>
-
-                            <span class="span">
-                                Nullam quis risus eget urna mollis ornare.
-                            </span>
-
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="feature-card">
-
-                            <div class="card-icon">
-                                <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
-                            </div>
-
-                            <span class="span">
-                                Etiam porta euismod malesuada mollis.
-                            </span>
-
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="feature-card">
-
-                            <div class="card-icon">
-                                <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
-                            </div>
-
-                            <span class="span">
-                                Vivamus sagittis lacus vel augue rutrum.
-                            </span>
-
-                        </div>
-                    </li>
-
-                </ul>
-
-            </div>
-
-        </div>
-    </section>
-
-    <!-- 
-        - #STATS
-    -->
-
-    <section class="stats" aria-label="our stats">
-        <div class="container">
-
-            <ul class="stats-card has-bg-image" style="background-image: url('./assets/images/stats-bg.jpg')">
-
-                <li>
-                    <p class="card-text">
-                        <span class="h1">7518</span>
-
-                        <spna class="span">Completed Projects</spna>
-                    </p>
-                </li>
-
-                <li>
-                    <p class="card-text">
-                        <span class="h1">3472</span>
-
-                        <spna class="span">Happy Customers</spna>
-                    </p>
-                </li>
-
-                <li>
-                    <p class="card-text">
-                        <span class="h1">2184</span>
-
-                        <spna class="span">Expert Employees</spna>
-                    </p>
-                </li>
-
-                <li>
-                    <p class="card-text">
-                        <span class="h1">4523</span>
-
-                        <spna class="span">Awards Won</spna>
-                    </p>
-                </li>
-
-            </ul>
-
-        </div>
-    </section>
+                                </div>
+                            </section>
 
     <!--  Testimony Section -->
     <section id="screenshots" class="padd-section text-center wow fadeInUp">
